User manual: minor modifications for discrete variables

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -893,7 +893,7 @@ Examples of array definitions are given below:
 			& my_const_rational_array[0] = 1
 			& array_append([1, 2, 3], [4, 5, 6]) = [1, 2, 3, 4, 5, 6]
 			& array_append([[1, 2]], [[3, 4]]) = [[1, 2], [3, 4]]
-			& array_length([1, 1, 1]) = 3
+			& array_length([20, 4, 6]) = 3
 			& array_mem(2, [8, 6, 2])
 		goto l1;
 	\end{IMITATORmodel}
@@ -1004,7 +1004,7 @@ Examples of stack definitions are given below:
 
 %------------------------------------------------------------
 \begin{example}
-	To illustrate the stacks operations, note that the following guard in the model fragment below will evaluate to true:
+	The following code fragment illustrates some possibilities offered by the stacks operations:
 
 %------------------------------------------------------------
 	\begin{IMITATORmodel}
